# ipc

./: .gitignore  CMakeLists.txt  pyproject.toml
include/: SharedMemorySegment.h  schema.h  schema.hpp  shm_segment.h  shm_segment.hpp  spsc_queue.h  spsc_queue.hpp  type_info.h  type_info.hpp
src/: consumer_test.cpp  consumer_test.py  producer_test.cpp
